<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_horizontal">

    <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge" />

    <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:layout_toStartOf="@id/about_title"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/about_title"
            android:textAppearance="?android:textAppearanceSmall"
            tools:ignore="RelativeOverlap" />

    <TextView
            android:id="@+id/about_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_copyright"
            android:layout_below="@id/about_title"
            android:textAppearance="?android:textAppearanceSmall" />

    <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:layout_below="@id/about_copyright"
            android:text="@string/about_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="?android:textColorSecondary" />

    <Button
            android:id="@+id/about_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_text"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/margin_horizontal_big"
            android:paddingRight="@dimen/margin_horizontal_big"
            android:text="@string/about_close" />
</RelativeLayout>
