<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_article_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_horizontal"
        android:paddingTop="@dimen/margin_vertical"
        android:paddingRight="@dimen/margin_horizontal"
        android:paddingBottom="@dimen/margin_vertical">

        <LinearLayout
            android:id="@+id/artile_detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/article_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sample_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/article_detail_date_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_date_author"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/text_tertiary" />

            <TextView
                android:id="@+id/article_detail_full_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_vertical"
                android:text="@string/entry_view_full"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/xml_text_link" />

            <TextView
                android:id="@+id/article_detail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/sample_summary"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:textColorSecondary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/artile_detail_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                style="?android:progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_horizontal_small"
                android:text="@string/entry_loading" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>
